--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Sprint Challenge - Home</title>
+  <title>Lambda</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
 </head>
-
 <body>
+ <img src="img/lambda-black.png" alt="lambda-black">
+
+
+    <nav class="header-nav">
+                    <a href="#">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="#">Products</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+    </nav>
     <div class="container">
    
+        <img src="img/jumbo.jpg" alt="jumbo">
+
+
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
